--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
                 <div class="info">
                   <h6 class="skill-bullet">Rice University</h6>
                   <ul>
-                    <li>Master's of Computer Sicence</li>
-                    <li>Relevant Courses: Database Implementation,
+                    <li><b>Master's of Computer Sicence</b></li>
+                    <li><b>Relevant Courses:</b> Database Implementation,
                       Graduate Design and Analysis of Algorithm, Introduction to Computer Network</li>
                   </ul>
                   <h6 class="skill-bullet">Peking University</h6>
                   <ul>
                     <li>Major: Big Data Application</li>
-                    <li>Relevant Courses: Data Structures and Algorithm, Statistics, Linear Algebra, Machine Learning,
+                    <li><b>Relevant Courses:</b> Data Structures and Algorithm, Statistics, Linear Algebra, Machine Learning,
                       Text Mining, Database Systems,
                       Object-oriented Programming with Java, Computer Network</li>
                   </ul>
@@ -330,9 +330,9 @@
                 <div class="u-container-style u-layout-cell u-right-cell u-size-40 u-layout-cell-3">
                   <div class="u-container-layout u-container-layout-3">
                     </span>
-                    <h3 class="u-text"> <a href="https://www.overleaf.com/read/kzpnpqjkrfpb#ecbcc8">Data-Driven
+                    <h3 class="u-text-6 project-title"> <a href="https://www.overleaf.com/read/kzpnpqjkrfpb#ecbcc8">Data-Driven
                         Inventory Optimization with (R,S) model in Beverage Industry: A Case Study</h3></a>
-                    <p class="u-text description u-text-5">
+                    <p class="description ">
                       This case study focuses on establishing an efficient (R, S) inventory management model for the
                       beverage supply chain, considering
                       multiple stock-keeping units(SKUs) and dynamic shifts in demand. The primary
@@ -351,10 +351,10 @@
                 </div>
                 <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-4">
                   <div class="u-container-layout u-container-layout-3">
-                    <h3 class="u-text u-text-6"><a
+                    <h3 class="u-text u-text-6 project-title"><a
                         href="https://www.kaggle.com/code/theysaynounderscore/fraud-detection-on-medical-data?scriptVersionId=155749868">
                         Healthcare Provider Fraud Detection and Data Analysis</a></h3>
-                    <p class="u-text description ">
+                    <p class=" description ">
                       Unraveling the complexities of the U.S. medical system, my project employs advanced methodologies,
                       including Random Forest, PCA, and innovative feature engineering. Achieving an outstanding 85%
                       correction on the testing set, the project showcases not
@@ -365,12 +365,12 @@
                   </div>
                 </div>
                 <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-5">
-                  <div class="u-container-layout u-container-layout-5">
-                    <h3 class="u-text u-text-8"><a
+                  <div class="u-container-layout u-container-layout-3">
+                    <h3 class="u-text u-text-6 project-title"><a
                         href="https://www.kaggle.com/code/theysaynounderscore/housing-data-visualization-in-bj">Data
                         Analysis of Housing in Beijing</a></h3>
-                    <!-- HTML !-->
-                    <p class="u-text description">Determine the home's value in the current market for a listing price.
+                   
+                    <p class=" description">Determine the home's value in the current market for a listing price.
                     </p>
                     <button class="pink-button" role="button"
                       href="https://www.kaggle.com/code/theysaynounderscore/housing-data-visualization-in-bj">Kaggle
