--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <title>Home</title>
   <link rel="stylesheet" href="src/css/style.css" media="screen">
   <link rel="stylesheet" href="src/css/Home.css" media="screen">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="stylesheet" href="src/css/animated.css" media="screen">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" media="screen"/>
   <link id="u-theme-google-font" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i" media="screen"/>
   <link id="u-page-google-font" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+    href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"/>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -117,9 +116,9 @@
 		padding-right: 5%;
     flex:100%; 
     max-height: 100%;">
-              <h3 class="u-text u-text-1 animate fadeInDown">About me<br>
+              <h3 class="u-text u-text-1 animate animate__animated animate__fadeInDown" >About me<br>
               </h3>
-              <div class="fadeInDown" style="display: flex;
+              <div class="animate__animated animate__fadeIn" style="display: flex;
                  justify-content: center; 
                 align-items:center;
                 padding: 3%;">
@@ -243,7 +242,7 @@
 
   </div> -->
   <div class="wrapper" id="selected-projects">
-    <div class=" section-title">
+    <div class="animate__animated animate__fadeInDown section-title">
       <h2 class="u-text u-text-1">Selected Projects<br>
       </h2>
       <!-- <h2>Data Mining and Visualization</h2> -->
