--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   class="u-body u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="sec-43be">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <a href="https://audreyxyz.github.io" class="u-image u-logo u-image-1">
+      <a href="https://audreyhsiao.github.io" class="u-image u-logo u-image-1">
         <img src="./src/images/logo.jpg" class=" logo-image">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
