--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "src/images/logo.png"
+		"logo": "src/images/logo.jpg"
 }</script>
   <meta name="theme-color" content="#478ac9">
   <meta property="og:title" content="Home">
@@ -226,7 +226,7 @@
   class="u-body u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="sec-43be">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <a href="https://audreyhsiao.github.io" class="u-image u-logo u-image-1">
+      <a href="https://audreyhsiao.github.io" class="u-image u-image-1">
         <img src="./src/images/logo.jpg" class=" logo-image">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
