--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <title>Home</title>
   <link rel="stylesheet" href="src/css/style_clean.css" media="screen">
@@ -205,6 +205,39 @@
     });
   </script>
 
+  <script>
+    // Mobile menu functionality
+    document.addEventListener('DOMContentLoaded', function () {
+      const mobileMenuToggle = document.querySelector('.mobile-menu-toggle');
+      const navContainer = document.querySelector('.u-nav-container');
+
+      if (mobileMenuToggle && navContainer) {
+        mobileMenuToggle.addEventListener('click', function (e) {
+          e.preventDefault();
+          mobileMenuToggle.classList.toggle('active');
+          navContainer.classList.toggle('active');
+        });
+
+        // Close menu when clicking on a link
+        const navLinks = document.querySelectorAll('.u-nav-item a');
+        navLinks.forEach(link => {
+          link.addEventListener('click', function () {
+            mobileMenuToggle.classList.remove('active');
+            navContainer.classList.remove('active');
+          });
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', function (e) {
+          if (!mobileMenuToggle.contains(e.target) && !navContainer.contains(e.target)) {
+            mobileMenuToggle.classList.remove('active');
+            navContainer.classList.remove('active');
+          }
+        });
+      }
+    });
+  </script>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -233,8 +266,10 @@
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
           <a class="u-button-style u-custom-left-right-menu-spacing 
             u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link
-             u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-
+             u-text-active-palette-1-base u-text-hover-palette-2-base mobile-menu-toggle" href="#">
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
           </a>
         </div>
         <div class="u-nav-container">
