--- a/index.html
+++ b/index.html
@@ -86,124 +86,6 @@
     });
   </script>
 
-  <script>
-    // AI/ML Project Box Interactive Functionality
-    document.addEventListener('DOMContentLoaded', function () {
-      const projectBoxes = document.querySelectorAll('.ai-project-box');
-      const modal = document.getElementById('project-modal');
-      const modalTitle = document.getElementById('modal-title');
-      const modalDescription = document.getElementById('modal-description');
-      const modalDetails = document.getElementById('modal-details');
-      const modalClose = document.getElementById('modal-close');
-
-      // Project data
-      const projectData = {
-        'llm-deployment': {
-          title: 'LLM Deployment & LangChain',
-          description: 'Deploying and orchestrating Large Language Models using LangChain framework for production applications.',
-          details: `
-            <h4>Key Technologies:</h4>
-            <ul>
-              <li>LangChain for LLM orchestration</li>
-              <li>OpenAI GPT models integration</li>
-              <li>Vector databases (Pinecone, Chroma)</li>
-              <li>Streamlit/FastAPI deployment</li>
-              <li>Prompt engineering and optimization</li>
-            </ul>
-            <h4>Projects:</h4>
-            <ul>
-              <li>Chatbot with document Q&A system</li>
-              <li>Automated content generation pipeline</li>
-              <li>Multi-agent AI workflow system</li>
-            </ul>
-            <h4>Experience:</h4>
-            <p>Built production-ready LLM applications with RAG (Retrieval-Augmented Generation) capabilities, implementing efficient prompt chaining and memory management for conversational AI systems.</p>
-          `
-        },
-        'fine-tuning': {
-          title: 'Model Fine-tuning',
-          description: 'Fine-tuning pre-trained models for specific domains and tasks using transfer learning techniques.',
-          details: `
-            <h4>Key Technologies:</h4>
-            <ul>
-              <li>Hugging Face Transformers</li>
-              <li>PyTorch Lightning</li>
-              <li>LoRA (Low-Rank Adaptation)</li>
-              <li>Parameter-efficient fine-tuning</li>
-              <li>Model evaluation and validation</li>
-            </ul>
-            <h4>Projects:</h4>
-            <ul>
-              <li>Domain-specific BERT fine-tuning</li>
-              <li>Custom sentiment analysis models</li>
-              <li>Specialized text classification</li>
-            </ul>
-            <h4>Experience:</h4>
-            <p>Successfully fine-tuned transformer models for domain-specific tasks, achieving significant performance improvements over base models while maintaining computational efficiency.</p>
-          `
-        },
-        'pytorch-training': {
-          title: 'PyTorch Training from Scratch',
-          description: 'Building and training neural networks from scratch using PyTorch for custom AI applications.',
-          details: `
-            <h4>Key Technologies:</h4>
-            <ul>
-              <li>PyTorch deep learning framework</li>
-              <li>Custom loss functions and optimizers</li>
-              <li>Data preprocessing and augmentation</li>
-              <li>Model architecture design</li>
-              <li>Training pipeline optimization</li>
-            </ul>
-            <h4>Projects:</h4>
-            <ul>
-              <li>Graph Neural Networks for anomaly detection</li>
-              <li>Computer vision models for medical imaging</li>
-              <li>Time series forecasting models</li>
-            </ul>
-            <h4>Experience:</h4>
-            <p>Developed custom neural network architectures from scratch, including Graph Neural Networks for blockchain anomaly detection and computer vision models for medical image analysis.</p>
-          `
-        }
-      };
-
-      // Add click event listeners to project boxes
-      projectBoxes.forEach(box => {
-        box.addEventListener('click', function () {
-          const projectId = this.getAttribute('data-project');
-          const project = projectData[projectId];
-
-          if (project) {
-            modalTitle.textContent = project.title;
-            modalDescription.textContent = project.description;
-            modalDetails.innerHTML = project.details;
-            modal.classList.add('active');
-            document.body.style.overflow = 'hidden'; // Prevent background scrolling
-          }
-        });
-      });
-
-      // Close modal functionality
-      function closeModal() {
-        modal.classList.remove('active');
-        document.body.style.overflow = 'auto'; // Restore scrolling
-      }
-
-      modalClose.addEventListener('click', closeModal);
-
-      modal.addEventListener('click', function (e) {
-        if (e.target === modal) {
-          closeModal();
-        }
-      });
-
-      // Close modal with Escape key
-      document.addEventListener('keydown', function (e) {
-        if (e.key === 'Escape' && modal.classList.contains('active')) {
-          closeModal();
-        }
-      });
-    });
-  </script>
 
   <script>
     // Mobile menu functionality
@@ -280,6 +162,8 @@
                 href="#about" style="padding: 10px 20px;">About</a></li>
             <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
                 href="#projects">Projects</a></li>
+            <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
+                href="photography.html" style="padding: 10px 20px;">Photography</a></li>
             <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link  u-text-hover-palette-2-base"
                 href="#contact" style="padding: 10px 20px;">Contact</a></li>
 
@@ -381,13 +265,13 @@
                   <h6>Education</h6>
                 </div>
                 <div class="info">
-                  <h6 class="skill-bullet">Rice University</h6>
+                  <h6>Rice University</h6>
                   <ul>
                     <li><b>Master's of Computer Sicence</b></li>
                     <li><b>Relevant Courses:</b> Database Implementation,
                       Graduate Design and Analysis of Algorithm, Introduction to Computer Network</li>
                   </ul>
-                  <h6 class="skill-bullet">Peking University</h6>
+                  <h6>Peking University</h6>
                   <ul>
                     <li>Major: Big Data Application</li>
                     <li><b>Relevant Courses:</b> Data Structures and Algorithm, Statistics, Linear Algebra, Machine
@@ -405,18 +289,18 @@
                   <h6>Skills</h6>
                 </div>
                 <div class="info">
-                  <h6 class="skill-bullet">Programming Languages</h6>
+                  <h6>Programming Languages</h6>
                   <ul>
 
                     <li>C++ (Proficient), Python (Proficient), Java (Familiar), SQL (Proficient), HTML/CSS, JavaScript
                       (Familiar)</li>
                   </ul>
-                  <h6 class="skill-bullet">Tools & Framework </h6>
+                  <h6>Tools & Framework </h6>
                   <ul>
                     <li>
                       Pytorch, MySQL, Pandas, Numpy, MongoDB, Git, NodeJS, React</li>
                   </ul>
-                  <h6 class="skill-bullet">Applicable Concepts </h6>
+                  <h6>Applicable Concepts </h6>
                   <ul>
                     <li>Object-Oriented Programming, Data Visualization and Analyze, Web development, Ensemble learning
                     </li>
@@ -445,7 +329,7 @@
   <!-- AI/ML Applications Section -->
   <div class="wrapper" id="ai-ml-applications">
     <div class="animate__animated animate__fadeInDown section-title">
-      <h2 class="u-text u-text-1">AI/ML Applications<br></h2>
+      <h3 class="u-text u-text-1">AI/ML Applications<br></h3>
     </div>
     <p class="u-text description">
       Specialized in deploying Large Language Models (LLM) using LangChain, fine-tuning pre-trained models,
@@ -454,7 +338,7 @@
     </p>
 
     <div class="ai-ml-projects-grid">
-      <div class="ai-project-box" data-project="llm-deployment">
+      <div class="ai-project-box">
         <div class="project-header">
           <h3 class="project-title">LLM Deployment & LangChain</h3>
           <div class="project-icon">🤖</div>
@@ -481,7 +365,7 @@
         </div>
       </div>
 
-      <div class="ai-project-box" data-project="fine-tuning">
+      <div class="ai-project-box">
         <div class="project-header">
           <h3 class="project-title">Model Fine-tuning</h3>
           <div class="project-icon">⚙️</div>
@@ -489,7 +373,7 @@
         <div class="project-preview">
           <p>Fine-tuning pre-trained models for specific domains and tasks using transfer learning techniques.</p>
         </div>
-        <div class="project-details">
+        <div class="project-previewgit">
           <h4>Key Technologies:</h4>
           <ul>
             <li>Hugging Face Transformers</li>
@@ -507,7 +391,7 @@
         </div>
       </div>
 
-      <div class="ai-project-box" data-project="pytorch-training">
+      <div class="ai-project-box">
         <div class="project-header">
           <h3 class="project-title">PyTorch Training from Scratch</h3>
           <div class="project-icon">🧠</div>
@@ -537,8 +421,8 @@
 
   <div class="wrapper" id="selected-projects">
     <div class="animate__animated animate__fadeInDown section-title">
-      <h2 class="u-text u-text-1">Selected Projects<br>
-      </h2>
+      <h3 class="u-text u-text-1">Selected Projects<br>
+      </h3>
       <!-- <h2>Data Mining and Visualization</h2> -->
     </div>
     <p class="u-text description">
@@ -557,13 +441,14 @@
     </p>
     <div class="box">
       <div class="description">
-        <h2>Database System Implementation</h2>
-        <p>
-          Design and implement a database system from scratch in a team of 2 using C++, including the development of a
-          LRU (Least Recently
-          Used) buffer manager, implementing record management, and managing file I/O on tables. Build and optimize the
-          system to operate on Linux, focusing on efficient data storage and retrieval mechanisms
-        </p>
+        <h3>Database System Implementation</h2>
+          <p>
+            Design and implement a database system from scratch in a team of 2 using C++, including the development of a
+            LRU (Least Recently
+            Used) buffer manager, implementing record management, and managing file I/O on tables. Build and optimize
+            the
+            system to operate on Linux, focusing on efficient data storage and retrieval mechanisms
+          </p>
       </div>
 
     </div>
@@ -607,7 +492,7 @@
                   <div class="u-container-layout u-valign-middle-md u-container-layout-1">
                     <h3 class="u-text u-text-1" id="projects">Selected Projects<br>
                     </h3>
-                    <h2 class="u-text section-title ">Machine Learning</h2>
+                    <h2 class="u-text section-title ">Data analysis and visualization</h2>
 
                     <!--p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p-->
@@ -685,6 +570,22 @@
 
 
 
+  <!-- YouTube Video Section -->
+  <div class="wrapper" id="video-demo">
+    <div class="animate__animated animate__fadeInDown section-title">
+      <h3 class="u-text u-text-1">Project Demo<br></h3>
+    </div>
+    <p class="u-text description">
+      Watch a demonstration of my application development project.
+    </p>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/AgI9g2c5nm8" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+
   <section class="u-black u-clearfix u-section-8" id="carousel_fa10">
     <div class="u-clearfix u-sheet u-sheet-1">
       <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
@@ -735,15 +636,6 @@
     </div>
   </section>
 
-  <!-- Modal for AI/ML Project Details -->
-  <div class="modal-overlay" id="project-modal">
-    <div class="modal-content">
-      <button class="modal-close" id="modal-close">&times;</button>
-      <h2 class="modal-title" id="modal-title"></h2>
-      <p class="modal-description" id="modal-description"></p>
-      <div id="modal-details"></div>
-    </div>
-  </div>
 
 </body>
 
